Added spectral shield scroll. Moved ritual check from method savePlayerData to EventListener

--- a/resources/config.yml
+++ b/resources/config.yml
@@ -42,6 +42,10 @@ ASTRAL_PET:
 METEORITE:
   consumedMana: 30
   CDseconds: 40
+SPECTRAL_SHIELD:
+  consumedMana: 29
+  CDseconds: 300
+  seconds: 180
 
 #Rituals setting
 MANAUPFIRST:
