Added aspect system. Rewrited research system to aspects. Now IMP move to player instead rabdom vector. Added new commands, and fixed minor bugs with output of commands. Added Brain. Added aspect craft system. Rewrited accessories inventory manage. Added drop custom items. Added getting head system. Added DataBase. Rewrited reseraches. Now Menu items in book is menu. Created random stuff eith standard gui cell. Small fix nether start to nether star. Rewrited books updaters. Added to vampiric scroll configurable namber of regen and damage.

--- a/resources/cauldron.yml
+++ b/resources/cauldron.yml
@@ -405,3 +405,8 @@ MAGNET:
   result:
     ==: org.bukkit.inventory.ItemStack
     type: FEATHER
+BRAIN:
+  recipe:
+  result:
+    ==: org.bukkit.inventory.ItemStack
+    type: STICK
