Added new particle effect (particle ray). Work with pedestal is done. Pedestals fully usable and now working with altar crafts

--- a/resources/cauldron.yml
+++ b/resources/cauldron.yml
@@ -418,3 +418,8 @@ BRAIN:
   result:
     ==: org.bukkit.inventory.ItemStack
     type: STICK
+PEDESTAL:
+  recipe:
+  result:
+    ==: org.bukkit.inventory.ItemStack
+    type: BONE_BLOCK
